# morsewav

./: .gitignore  CMakeLists.txt  README.md  morsewav_plus.c  version.h.in
.github/workflows/: ci.yml  release.yml
lib/: CMakeLists.txt  cli.c  cli.h  common.h  dsp.c  dsp.h  morse.c  morse.h  progress.c  progress.h  wav.c  wav.h
